Checkstyle cleanup
Signed-off-by: Kondaka <krishkdk@amazon.com>